--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,7 +5,7 @@ authors = ["Izzy Swart <zenerboson@gmail.com>"]
 edition = "2018"
 
 [dependencies]
-futures = { version = "0.3.5" }
+futures = { version = "0.3.5", features = ["thread-pool"] }
 protocol = { git = "https://github.com/noocene/protocol" }
 thiserror = { git = "https://github.com/noocene/thiserror", default-features = false }
 core-error = { git = "https://github.com/core-error/core-error", default-features = false }
