--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,6 +15,7 @@ erasure-traits = { git = "https://github.com/noocene/erasure-traits" }
 protocol-mve-transport = { git = "https://github.com/noocene/protocol-mve-transport", features = ["vessels"] }
 highway = "0.4.0"
 derive = { path = "./derive" }
+proc-macro-hack = "0.5.16"
 
 [workspace]
 members = ["./derive"]
